# reference-helib-backend

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  quickstart_guide.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cmake.yml  install-requirements.sh
include/benchmarks/bgv/: helib_bgv_dot_product_benchmark.h  helib_bgv_element_wise_benchmark.h  helib_bgv_matmultval_benchmark.h
include/benchmarks/ckks/: helib_ckks_dot_product_benchmark.h  helib_ckks_element_wise_benchmark.h  helib_ckks_logreg_horner.h  helib_ckks_matmultval_benchmark.h
include/engine/: helib_context.h  helib_engine.h  helib_types.h  helib_version.h.in
src/benchmarks/bgv/: helib_bgv_dot_product_benchmark.cpp  helib_bgv_element_wise_benchmark.cpp  helib_bgv_matmultval_benchmark.cpp
src/benchmarks/ckks/: helib_ckks_dot_product_benchmark.cpp  helib_ckks_element_wise_benchmark.cpp  helib_ckks_logreg_horner.cpp  helib_ckks_matmultval_benchmark.cpp
src/engine/: helib_context.cpp  helib_engine.cpp
